--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ boto3==1.16.37
 botocore==1.19.37
 dj-database-url==0.5.0
 Django==3.1.4
-django-allauth==0.44.0
+django-allauth==0.43.0
+django-countries==7.0
 django-crispy-forms==1.10.0
 django-heroku==0.3.1
 django-storages==1.10.1
